tests/golden/type_errors/array_filter_member_arity.err
Type error at 1:12: expected 1 arguments but got 0
  [1].filter();
             ^
